src/areaz/Micro86/HL/parser/grammar.txt
----------------
MicroPL86 Syntax
----------------

<program> ::= program {<declaration>} {<statement>} end

<declaration> ::= int ID {, ID}; 

<statement> ::= 
	<assignment-statement>
|	<if-statement>
|	<while-statement>
|	<for-statement>
|	<print-statement>
|	<read-statement>
|	<compound-statement>

<assignment-statement> ::= ID = <expression>;

<if-statement> ::= if (<expression> RELOP <expression>) <statement> [else <statement>]

<while-statement> ::= while (<expression> RELOP <expression>) <statement>

<for-statement> ::= for (ID = <expression>, <expression>) <statement>

<print-statement> ::= print <expression>;

<read-statement> ::= read ID;

<compound-statement> ::= { {<statement>} }

<expression> ::= <term> {ADDOP <term>}

<term> ::= <factor> {MULOP <factor>}

<factor> ::= ID | (<expression>)


-----------------------------
Lexical Elements of MicroPL86
-----------------------------

ID 		[a-zA-z][a-zA-Z0-9]+
INT		[0-9]+	
Keywords	program int if while for print read end 
RELOP 	== | != | &lt; | &lt;= | &gt; | &gt;=
ADDOP	+ | -
MULOP	* | / | %
PUNCT	; | , | { | } | ( | )
